--- a/Projeto1/index.html
+++ b/Projeto1/index.html
@@ -5,28 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <!-- Arquivos de responsividade CSS-->
+    <link rel="stylesheet" href="./style/responsive.css">
+    <!-- Arquivos OWL CSS-->
+    <link rel="stylesheet" href="./style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="./style/owl/owl.theme.default.min.css">
     <title>gamerFlix</title>
 </head>
 <body>
     <header>
         <div class="container">
             <h2 class="logo">GAMER_FLIX</h2>
-            
-
             <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Açao</a>
-                <a href="#">Aventura</a>
-                <a href="#">Corrida</a>
-                <a href="#">Luta</a>
-                <a href="#">Suspense</a>
-                <a href="#">Lançamento</a>
+                <a href="#inicio">Inicio</a>
+                <a href="#acao">Açao</a>
+                <a href="#aventura">Aventura</a>
+                <a href="#corrida">Corrida</a>
+                <a href="#luta">Luta</a>
+                <a href="#suspense">Suspense</a>
+                <a href="#lacamento">Lançamento</a>
             </nav>
         </div>
     </header>
     
     <main>
-        <div class="pagina-principal">
+        <div class="pagina-principal" id="inicio">
             <div class="container">
                 <h3 class="titulo">FORTINITE</h3>
                 <p class="description">
@@ -47,6 +50,221 @@
         </div>
     </main>
 
+    <div class="carrousel-inicio" id="lacamento">
+
+        <h3 class="subtitulo">Lançamentos</h3>
+
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/battleField2042.jpg" alt="jogo BattleField">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/BatmanArkham.jpg" alt="jogo Batman Arkham">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/CivCity.jpg" alt="jogo Civ City">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Codiguin.jpg" alt="jogo Copdiguin">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/DeathStrangin.jpg" alt="jogo Death Strange">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Gotic3.jpg" alt="jogo Gothic 3">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/RainboSixExtration.jpg" alt="jogo Raibow Six Extraction">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/splitSecond.jpg" alt="jogo Split Second">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/TheLastOfUs2.jpg" alt="jogo The Last Of Us 2">
+            </div>
+        </div>
+    </div>
+
+    <div class="carrousel-inicio" id="acao">
+
+        <h3 class="subtitulo">Açao</h3>
+
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/battleField2042.jpg" alt="jogo BattleField">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/BatmanArkham.jpg" alt="jogo Batman Arkham">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/CivCity.jpg" alt="jogo Civ City">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Codiguin.jpg" alt="jogo Copdiguin">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/DeathStrangin.jpg" alt="jogo Death Strange">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Gotic3.jpg" alt="jogo Gothic 3">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/RainboSixExtration.jpg" alt="jogo Raibow Six Extraction">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/splitSecond.jpg" alt="jogo Split Second">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/TheLastOfUs2.jpg" alt="jogo The Last Of Us 2">
+            </div>
+        </div>
+    </div>
+
+    <div class="carrousel-inicio" id="aventura">
+
+        <h3 class="subtitulo">Aventura</h3>
+
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/battleField2042.jpg" alt="jogo BattleField">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/BatmanArkham.jpg" alt="jogo Batman Arkham">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/CivCity.jpg" alt="jogo Civ City">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Codiguin.jpg" alt="jogo Copdiguin">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/DeathStrangin.jpg" alt="jogo Death Strange">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Gotic3.jpg" alt="jogo Gothic 3">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/RainboSixExtration.jpg" alt="jogo Raibow Six Extraction">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/splitSecond.jpg" alt="jogo Split Second">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/TheLastOfUs2.jpg" alt="jogo The Last Of Us 2">
+            </div>
+        </div>
+    </div>
+
+    <div class="carrousel-inicio" id="corrida">
+
+        <h3 class="subtitulo">Corrida</h3>
+
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/battleField2042.jpg" alt="jogo BattleField">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/BatmanArkham.jpg" alt="jogo Batman Arkham">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/CivCity.jpg" alt="jogo Civ City">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Codiguin.jpg" alt="jogo Copdiguin">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/DeathStrangin.jpg" alt="jogo Death Strange">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Gotic3.jpg" alt="jogo Gothic 3">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/RainboSixExtration.jpg" alt="jogo Raibow Six Extraction">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/splitSecond.jpg" alt="jogo Split Second">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/TheLastOfUs2.jpg" alt="jogo The Last Of Us 2">
+            </div>
+        </div>
+    </div>
+
+    <div class="carrousel-inicio" id="luta">
+
+        <h3 class="subtitulo">Luta</h3>
+
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/battleField2042.jpg" alt="jogo BattleField">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/BatmanArkham.jpg" alt="jogo Batman Arkham">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/CivCity.jpg" alt="jogo Civ City">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Codiguin.jpg" alt="jogo Copdiguin">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/DeathStrangin.jpg" alt="jogo Death Strange">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Gotic3.jpg" alt="jogo Gothic 3">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/RainboSixExtration.jpg" alt="jogo Raibow Six Extraction">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/splitSecond.jpg" alt="jogo Split Second">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/TheLastOfUs2.jpg" alt="jogo The Last Of Us 2">
+            </div>
+        </div>
+    </div>
+
+    <div class="carrousel-inicio" suspense>
+
+        <h3 class="subtitulo">Lançamentos</h3>
+
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/battleField2042.jpg" alt="jogo BattleField">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/BatmanArkham.jpg" alt="jogo Batman Arkham">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/CivCity.jpg" alt="jogo Civ City">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Codiguin.jpg" alt="jogo Copdiguin">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/DeathStrangin.jpg" alt="jogo Death Strange">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/Gotic3.jpg" alt="jogo Gothic 3">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/RainboSixExtration.jpg" alt="jogo Raibow Six Extraction">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/splitSecond.jpg" alt="jogo Split Second">
+            </div>
+            <div class="item">
+                <img class="box-miniaturas" src="./img/lancamento/TheLastOfUs2.jpg" alt="jogo The Last Of Us 2">
+            </div>
+        </div>
+    </div>
+
     <script src="https://use.fontawesome.com/754a8eddb8.js"></script>
+    <!-- Arquivos OWL JS-->
+    <script src="./js/owl/jquery.min.js"></script>
+    <script src="./js/owl/owl.carousel.min.js"></script>
+    <script src="./js/owl/setup.js"></script>
+
 </body>
 </html>
